# desktop-app

./: Cargo.toml  README.md  activity_log.csv
src/: gui.rs  lib.rs  main.rs  monitor.rs  types.rs
