[package]
name = "desk-monitor"
version = "0.1.0"
edition = "2021"
authors = ["User"]
description = "A desktop activity monitor that records mouse and keyboard actions"

[dependencies]
device_query = "1.1.3"
csv = "1.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
egui = "0.24.1"
glutin = "0.30"
glutin-winit = "0.3"
winit = "0.28"
raw-window-handle = "0.5"
egui-winit = { version = "0.24.1", default-features = false }
egui_glow = { version = "0.24.1" }
glow = "0.12"
anyhow = "1.0"
