[package]
name = "desk-monitor"
version = "0.1.0"
edition = "2021"
authors = ["User"]
description = "A desktop activity monitor that records mouse and keyboard actions"

[dependencies]
device_query = "1.1.3"
csv = "1.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = { version = "0.26.0", default-features = true }
anyhow = "1.0"
